<?xml version="1.0"?>
<package>
  <name>sick_ldmrs_description</name>
  <version>0.0.0</version>
  <description>
    This package contains an URDF description of the SICK LD-MRS scanner and all supporting mesh files.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sick_ldmrs_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>xacro</run_depend>
</package>
