<?xml version="1.0"?>
<package>
  <name>sick_ldmrs_driver</name>
  <version>0.0.0</version>
  <description>
    A ROS driver for the SICK LD-MRS series of laser scanners.
    Currently, the package supports the 8-layer LD-MRS800001S01 scanner.
  </description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/sick_ldmrs_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>pcl_conversions</run_depend>
</package>
