<?xml version="1.0"?>
<package>
  <name>sick_ldmrs_tools</name>
  <version>0.0.0</version>
  <description>Examples how to use the sick_ldmrs</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/sick_ldmrs_tools</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sick_ldmrs_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sick_ldmrs_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>libpcl-all-dev</run_depend>


</package>
