<?xml version="1.0"?>
<package format="2">
  <name>sick_ldmrs_tools</name>
  <version>0.0.0</version>
  <description>Examples how to use the sick_ldmrs</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>
  <author email="ros@jochen.sprickerhof.de">Jochen Sprickerhof</author>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/sick_ldmrs_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>sick_ldmrs_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
</package>
